--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,8 @@
 name: Publish Package to npmjs
 on:
+  push:
+    branches:
+      - 'master'
   release:
     types: [ published ]
 jobs:
@@ -15,6 +18,6 @@ jobs:
           # Defaults to the user or organization that owns the workflow file
           scope: '@waltertamboer'
       - run: yarn
-      - run: yarn npm publish // for Yarn version 1, use `yarn publish` instead
+      - run: yarn npm publish # for Yarn version 1, use `yarn publish` instead
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
