--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,19 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/",
-        "sourceMap": true,
-        "declaration": true,
-        "noImplicitAny": true,
-        "module": "commonjs",
-        "target": "es6",
-        "lib": ["es2015", "dom"],
-        "jsx": "react",
-        "allowJs": true,
+        "allowSyntheticDefaultImports": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "lib": ["es2015", "es2016", "es2017", "dom"],
+        "module":"es2015",
         "moduleResolution": "node",
         "strict": true,
-        "strictNullChecks": true,
+        "sourceMap": true,
+        "target": "es6",
+        "typeRoots": [
+            "node_modules/@types"
+        ]
     },
     "include": [
-        "src/**/*",
+        "src"
     ]
 }
